<resources>
    <string name="app_name">Fu Express</string>
    <string name="main_home_tab_string">首页</string>
    <string name="main_need_tab_string">帮我</string>
    <string name="main_source">Brands</string>
    <string name="main_package_tab_string">包裹</string>
    <string name="main_me_tab_string">我</string>
    <string name="main_group">拼团</string>
    <string name="String_back_toast">再按一下退出程序</string>
    <string name="String_float_1">%1$.1f</string>
    <string name="String_float_2">%1$.2f</string>
    <string name="update_tip_title">升级新版本</string>
    <string name="update_new_version">检测到新版本</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="dismiss">取消</string>
    <string name="home_fg_help_01">帮我取货</string>
    <string name="home_fg_help_02">帮我收货</string>
    <string name="home_fg_help_03">帮我代购</string>
    <string name="home_fg_help_04">寄包裹</string>
    <string name="help_me_find">帮我找货</string>
    <string name="string_my_need">帮我</string>
    <string name="string_my_need_to_pay">去付款</string>
    <string name="string_need_in_storage">已入库</string>
    <string name="string_neeed_cancel">已取消</string>
    <string name="string_need_all">全部</string>
    <string name="string_need_time">需求时间：</string>
    <string name="string_need_type">需求类型：</string>
    <string name="string_need_no_item">暂无需求单</string>
    <string name="package_package_number">包裹号：</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_star">*</string>
    <string name="click_login">点击登录</string>
    <string name="my_money">我的余额</string>
    <string name="coupon">优惠券</string>
    <string name="address_manager">地址管理</string>
    <string name="connect_service">在线客服</string>
    <string name="help_center">帮助中心</string>
    <string name="notice">通知</string>
    <string name="clean_cache">清理缓存</string>
    <string name="version">版本号</string>
    <string name="help_me_get_package_title">帮我取货</string>
    <string name="payment_title_msg">选择支付方式</string>
    <string name="String_balance_first">账户余额：</string>
    <string name="String_ali_pay">支付宝支付</string>
    <string name="String_weixin_pay">微信支付</string>
    <string name="String_krbank_pay">友利银行</string>
    <string name="String_adyen_pay">信用卡</string>
    <string name="coupon_title_msg">优惠券</string>
    <string name="String_need_get">帮我取</string>
    <string name="String_need_find">帮我找</string>
    <string name="String_need_buy">帮我买</string>
    <string name="String_need_receive">帮我收</string>
    <string name="String_parcle_none">您目前还没有包裹，请添加包裹。</string>
    <string name="String_parcle_add">添加包裹</string>
    <string name="String_parcle_help_send">寄包裹</string>
    <string name="String_parcle_submit">提交</string>
    <string name="String_parcle_estimate_fee">预估运费&#058;</string>
    <string name="String_parcle_estimate_fee_tips">&#040;多出的运费将返还到您的账户余额中&#041;</string>
    <string name="String_parcle_name">包裹名称：</string>
    <string name="String_shipping_info">物流信息</string>
    <string name="String_pay_fee">运费支付</string>
    <string name="String_pure_pay">%1$s：%2$s</string>
    <string name="String_parcel_ali_pay">支付宝</string>
    <string name="String_parcel_weixin_pay">微信</string>
    <string name="String_parcel_pay_method">支付方式</string>
    <string name="String_parcel_weight_count">总重量：</string>
    <string name="String_parcel_shipping_fee">运费：</string>
    <string name="String_parcel_submit_sucess">成功提交包裹</string>
    <string name="String_parcel_submit_sucess_title">您的包裹已成功提交！</string>
    <string name="String_parcel_my_parcel_number">您的包裹号：</string>
    <string name="String_parcel_submit_success_info">您可以在“包裹”中查询</string>
    <string name="String_parcel_back_to_home">返回首页</string>
    <string name="back_to_demands_list">返回我的需求列表</string>
    <string name="package_to_send_submit">您的包裹%1$s已经成功提交发货！</string>
    <string name="package_send_notice">包裹的实际运费若少于预估运费，多出的运费将返还到您的充值卡账户中，请注意查收！您可以在已发货包裹中查询实际运费。</string>
    <string name="package_send_continue">继续去发包裹</string>
    <string name="package_send_submit_sucess">成功提交</string>
    <string name="edit_ablum_msg">编辑专辑</string>
    <string name="edit_album_dialog_title_msg">提示</string>
    <string name="preview_album_dialog_msg">你确定删除该图片吗？</string>
    <string name="preview_album_tip_msg">请输入专辑标题</string>
    <string name="warehouse_cancel">取消</string>
    <string name="warehouse_confirm">确定</string>
    <string name="String_parcel_delete">删除</string>
    <string name="String_parcel_add_photo">请添加您的物品图片</string>
    <string name="String_parcel_photo_type">&#040;支持JPG,JPEG,GIF,PNG格式&#041;</string>
    <string name="String_parcel_item_info">物品名称</string>
    <string name="String_parcel_item_info_tips">您还没有相关物品，去添加物品</string>
    <string name="String_parcel_declare_price">申报总价</string>
    <string name="String_parcel_declare_price_tips">请输入申报总价</string>
    <string name="String_parcel_declare_price_warn">请填写申报总价</string>
    <string name="String_parcel_item_count">物品总数</string>
    <string name="String_parcel_item_count_tips">请输入物品总数</string>
    <string name="String_parcel_item_count_warn">请输入物品总数</string>
    <string name="String_parcel_weight">总重量</string>
    <string name="String_parcel_weight_tips">请输入物品总重量</string>
    <string name="String_parcel_item_address">收货地址</string>
    <string name="String_parcel_item_address_tips">请选择收货地址</string>
    <string name="String_parcel_yun_fee">预估运费</string>
    <string name="String_parcel_save">保存</string>
    <string name="String_float_double">%1$.2f</string>
    <string name="package_plase_select_shipping_method">请选择物流方式</string>
    <string name="package_no_photo_tips">请添加图片</string>
    <string name="package_confirm">知道了</string>
    <string name="package_deflaut_weight_tips">包裹默认最低重量为%1$.2fkg,运费将多退少补</string>
    <string name="parcel_item_all">所有物品</string>
    <string name="parcel_append_item">添加物品</string>
    <string name="String_loading">正在加载中...</string>
    <string name="item_please_input_img">请添加物品图片</string>
    <string name="item_please_input_materials">请选择材质</string>
    <string name="item_please_input_category">请选择分类</string>
    <string name="item_please_input_price">请输入物品价格</string>
    <string name="item_input_price_less">物品价格必须大于0</string>
    <string name="item_please_input_num">请输入物品数量</string>
    <string name="item_input_num_less">物品数量必须大于0</string>
    <string name="item_append_success">添加成功</string>
    <string name="item_edit_sucess">修改成功</string>
    <string name="string_confirm_del_parcel">确认删除此包裹？</string>
    <string name="string_replenish_tip_1130">中国－广州\n目前暂时只支持广州服装、鞋包和面料批发市场取货、提货！\n\n取货量大的用户，\n在“我－在线客服”联系客服，可申请VIP服务费。</string>
    <string name="string_replenish_tip_2103">韩国－首尔\n目前暂时只支持东大门市场取货、提货！\n\n取货量大的用户，\n在“我－在线客服”联系客服，可申请VIP服务费。</string>
    <string name="string_hs_text_01_1130">轉運包裹、集運包裹，幫妳節省運費。</string>
    <string name="string_hs_text_02_1130">轉運量大的用戶，</string>
    <string name="string_hs_text_03_1130">在“我-在線客服”聯系客服，可申請VIP運費。</string>
    <string name="string_hs_text_01_2103">轉運包裹、集運包裹，幫妳節省運費。</string>
    <string name="string_hs_text_02_2103">轉運量大的用戶，</string>
    <string name="string_hs_text_03_2103">在“我-在線客服”聯系客服，可申請VIP運費。</string>
    <string name="string_pick_tip_1130">中國－廣州\n\n補貨、代購量大的用戶，\n在“我－在線客服”聯系客服，可申請VIP服務費。</string>
    <string name="string_pick_tip_2103">韓國－首爾\n\n補貨、代購量大的用戶，\n在“我－在線客服”聯系客服，可申請VIP服務費。</string>
    <string name="string_append_parcel_tip1_1130">中国－广州\n\n1.EMS，比较容易清关;</string>
    <string name="string_append_parcel_tip2_1130">2.禁运物品：液体／粉末／香水／气体／胶状等；</string>
    <string name="string_append_parcel_tip3_1130">3.顺丰，限制发海外大品牌商品，如:NIKE、GUCCI。</string>
    <string name="string_append_parcel_tip4_1130">发货包裹量大的用户，\n在“我－在线客服”联系客服，可申请VIP运费！</string>
    <string name="string_append_parcel_tip1_2103">韩国－首尔\n\n1.化妆品，请选择EMS仓库发货；</string>
    <string name="string_append_parcel_tip2_2103">2.顺丰&#038;FU Express，只发服装、鞋、包、配饰；</string>
    <string name="string_append_parcel_tip3_2103">3.顺丰，限制发海外大品牌商品，\n如:NIKE、MCM。</string>
    <string name="string_append_parcel_tip4_2103">发货包裹量大的用户，\n在“我－在线客服”联系客服，可申请VIP运费！</string>
    <string name="tip_add_parcel">点击此处\n来&#034;添加包裹&#034;吧</string>
    <string name="String_parcel">包裹</string>
    <string name="String_money_unit">CNY</string>
    <string name="String_parcel_goto_send">去发货</string>
    <string name="String_parcel_goto_pay">去支付</string>
    <string name="String_waite_receive">待收货</string>
    <string name="String_waite_out">待出库</string>
    <string name="String_sended">已发货</string>
    <string name="String_all">全部</string>
    <string name="String_submit_send">提交发货</string>
    <string name="package_has_no">暂无包裹</string>
    <string name="package_to_append">添加包裹</string>
    <string name="package_to_append_button">添加包裹</string>
    <string name="package_forcecast_shipping_fee">预估运费：</string>
    <string name="package_forcecast_weight">预估重量：</string>
    <string name="package_carriage_dsc">&#040;多出的运费将返还到您的账户余额中&#041;</string>
    <string name="package_default">默认</string>
    <string name="package_transport_type">物流方式</string>
    <string name="package_apply_price_text">申报价值</string>
    <string name="package_apply_price_detail">
        &#040;包裹申报价值需&#060;%1$s&#041;</string>
    <string name="package_shipping_insurance_text">快递保险</string>
    <string name="package_shipping_insurance_detail">&#040;保险费率&#160;%1$.2f%%&#041;</string>
    <string name="change_email_ed_hint_01_text">请输入您的新邮箱</string>
    <string name="change_email_ed_hint_02_text">请再次输入您的新邮箱</string>
    <string name="change_email_ed_text_01">新邮箱</string>
    <string name="change_email_ed_text_02">确认新邮箱</string>
    <string name="change_email_title_text">修改邮箱</string>
    <string name="card_payment_success_to_home_msg">返回首页</string>
    <string name="cart_confirm_title_bar_title">确认付款</string>
    <string name="kr_notice_1">복익스프레스 주식회사서울시 영등포구 양평로21나길 8(양평동5가)  대표이사：윤상룡</string>
    <string name="kr_address">서울시 영등포구 양평로21나길 8(양평동5가)  대표이사：윤상룡
    </string>
    <string name="kr_number"> 사업자번호 : 813-88-00097
    </string>
    <string name="kr_address_detail">통신판매업신고번호 : 제 2016-서울영등포-1134 호</string>
    <string name="kr_notice">Copyright © 2015 FU-EXPRESS, All Rights
        Reserved.
    </string>
    <string name="order_info_bottom_msg_1">복익스프레스 주식회사  |  서울시 영등포구 양평로21나길 8(양평동5가)  대표이사 : 윤상룡</string>
    <string name="order_info_bottom_msg_2">사업자번호 : 813-88-00097</string>
    <string name="order_info_bottom_msg_3">통신판매업신고번호 : 제 2016-서울영등포-1134 호</string>
    <string name="order_info_bottom_msg_4">Copyright © 2015 FU-EXPRESS, All Rights Reserved.</string>
    <string name="pick_up_krbank_info_pay_amount">付款金额</string>
    <string name="pick_up_krbank_info_pay_type">支付方式</string>
    <string name="pick_up_krbank_inzhafo_balance_pay">其中账户余额支付</string>
    <string name="pick_up_krbank_info_need_pay">还需支付</string>
    <string name="pick_up_krbank_info_bank_name">银行名称</string>
    <string name="pick_up_krbank_info_payee">收款人</string>
    <string name="pick_up_krbank_info_bank_id">银行账号</string>
    <string name="pick_up_krbank_info_amount">汇款金额</string>
    <string name="pick_up_krbank_info_note_number">汇款备注请填写以下红色数字：</string>
    <string name="hms_warehouse_text">入库仓库</string>
    <string name="hms_warehouse_text_hint">请选择入库仓库</string>
    <string name="hms_desc_text">物品名称</string>
    <string name="hms_desc_text_hint">您还可以输入200字符</string>
    <string name="hms_remarks_text">备注说明</string>
    <string name="hms_price_text">申报单价</string>
    <string name="hms_price_text_hint">请输入申报单价</string>
    <string name="sub_demand_success">成功提交需求</string>
    <string name="sub_demand_success_note">您的需求已成功提交</string>
    <string name="sub_damand_success_note_p1">您可以在</string>
    <string name="sub_demand_success_note_p2">“ 帮我 ”</string>
    <string name="sub_demand_success_note_p3">中查询相关信息。</string>
    <string name="hm_item_quantity">物品数量</string>
    <string name="hm_item_quantity_hint">请输入数量</string>
</resources>