<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:longer="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        >

    <LinearLayout
            android:id="@+id/ll_in_normal_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <include layout="@layout/help_item_head_view"/>

        <com.fuexpress.kr.ui.view.InputBoxView
                android:layout_marginTop="7dp"
                android:id="@+id/ip_01_help_adapter"
                android:layout_width="match_parent"
                longer:ipText="@string/hms_desc_text"
                longer:hintText="@string/hms_desc_text_hint"
                android:layout_height="wrap_content">
        </com.fuexpress.kr.ui.view.InputBoxView>

        <com.fuexpress.kr.ui.view.InputBoxView
                android:id="@+id/ip_02_help_adapter"
                longer:ipText="@string/hms_remarks_text"
                longer:hintText="@string/hms_desc_text_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        </com.fuexpress.kr.ui.view.InputBoxView>

        <com.fuexpress.kr.ui.view.InputBoxView
                android:id="@+id/ip_03_help_adapter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                longer:hintText="@string/hms_warehouse_text_hint"
                longer:ipText="@string/hms_warehouse_text"
                longer:showRightImageView="true">
        </com.fuexpress.kr.ui.view.InputBoxView>

        <com.fuexpress.kr.ui.view.InputBoxView
                android:id="@+id/ip_04_help_adapter"
                longer:ipText="@string/hms_price_text"
                longer:hintText="@string/hms_price_text_hint"
                longer:showRight="true"
                longer:rightText="KRW"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        </com.fuexpress.kr.ui.view.InputBoxView>

        <com.fuexpress.kr.ui.view.InputBoxView
                android:id="@+id/ip_05_help_adapter"
                longer:ipText="@string/hm_item_quantity"
                longer:hintText="@string/hm_item_quantity_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        </com.fuexpress.kr.ui.view.InputBoxView>

    </LinearLayout>

    <ImageView
            android:id="@+id/iv_in_item_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="120dp"
            android:src="@mipmap/demand_delete"
            android:visibility="gone"/>
</RelativeLayout>