<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/krbank_notice_layout"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_marginBottom="30dp"
              android:gravity="center"
              android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="@dimen/krbank_info_8"
        android:textColor="@color/gray_999"
        android:text="@string/kr_notice_1"/>
    <TextView
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="@dimen/krbank_info_8"
        android:textColor="@color/gray_999"
        android:text="@string/kr_address"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_999"
        android:textSize="@dimen/krbank_info_8"
        android:gravity="center_horizontal"
        android:text="@string/kr_number"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/krbank_info_8"
        android:textColor="@color/gray_999"
        android:gravity="center_horizontal"
        android:text="@string/kr_address_detail"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_999"
        android:textSize="@dimen/krbank_info_8"

        android:gravity="center_horizontal"
        android:text="@string/kr_notice"/>
</LinearLayout>