<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:longer="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_bg"
    android:orientation="vertical"
    >

    <com.fuexpress.kr.ui.view.TitleBarView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_in_change_email"
        longer:text="@string/change_email_title_text"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="13dp"
        android:background="@color/white"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_in_user_info_title_01"
            style="@style/system_Mytextsize_black_13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:text="@string/change_email_ed_text_01"/>

        <com.fuexpress.kr.ui.view.ClearEditTextPlus
            android:id="@+id/ed_in_change_email_new_email"
            style="@style/ed_for_gravity_right_to_normal"
            android:hint="@string/change_email_ed_hint_01_text"/>


    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/default_bg"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="@color/white"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_in_user_info_title_02"
            style="@style/system_Mytextsize_black_13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:text="@string/change_email_ed_text_02"/>

        <com.fuexpress.kr.ui.view.ClearEditTextPlus
            android:id="@+id/ed_in_change_email_new_email_again"
            style="@style/ed_for_gravity_right_to_normal"
            android:hint="@string/change_email_ed_hint_02_text"/>


    </RelativeLayout>


    <Button
        android:id="@+id/btn_in_change_email_config"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_red_btn_drawable"
        android:text="@string/String_parcel_save"
        android:textColor="@color/white"/>

</LinearLayout>
