<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:zhudong="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/default_bg"
              android:orientation="vertical">

    <com.fuexpress.kr.ui.view.TitleBarView
        android:id="@+id/krbank_info_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        zhudong:text="@string/cart_confirm_title_bar_title"/>

    <LinearLayout
        style="@style/layout_style"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pick_up_krbank_info_pay_amount"
                android:textColor="@color/gray_666"
                android:textSize="13sp"/>

            <TextView
                android:id="@+id/krbank_info_pay_amount_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_666"
                android:textSize="13sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pick_up_krbank_info_pay_type"
                android:textColor="@color/gray_666"
                android:textSize="13sp"/>

            <TextView
                android:id="@+id/krbank_info_pay_type_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_666"
                android:textSize="13sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pick_up_krbank_inzhafo_balance_pay"
                android:textColor="@color/gray_666"
                android:textSize="13sp"/>

            <TextView
                android:id="@+id/krbank_info_balance_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_666"
                android:textSize="13sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pick_up_krbank_info_need_pay"
                android:textColor="@color/black_0"
                android:textSize="13sp"/>

            <TextView
                android:id="@+id/krbank_info_need_pay_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_0"
                android:textSize="13sp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        style="@style/layout_style"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pick_up_krbank_info_bank_name"
                android:textColor="@color/gray_666"
                android:textSize="13sp"/>

            <TextView
                android:id="@+id/krbank_info_bank_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_0"
                android:textSize="13sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pick_up_krbank_info_payee"
                android:textColor="@color/gray_666"
                android:textSize="13sp"/>

            <TextView
                android:id="@+id/krbank_info_payee_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_0"
                android:textSize="13sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pick_up_krbank_info_bank_id"
                android:textColor="@color/gray_666"
                android:textSize="13sp"/>

            <TextView
                android:id="@+id/krbank_info_bank_id_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_0"
                android:textSize="13sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pick_up_krbank_info_amount"
                android:textColor="@color/gray_666"
                android:textSize="13sp"/>

            <TextView
                android:id="@+id/krbank_info_amount_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_0"
                android:textSize="13sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pick_up_krbank_info_note_number"
                android:textColor="@color/gray_666"
                android:textSize="13sp"/>

            <TextView
                android:id="@+id/krbank_info_note_number_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:textSize="13sp"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/krbank_info_go_home_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/borderlessButtonStyle"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_bg"
        android:text="@string/card_payment_success_to_home_msg"
        android:textColor="@color/white"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/order_info_bottom_msg_1"
        android:textColor="@color/gray_999"
        android:textSize="10sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="@string/order_info_bottom_msg_2"
        android:textColor="@color/gray_999"
        android:textSize="10sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="@string/order_info_bottom_msg_3"
        android:textColor="@color/gray_999"
        android:textSize="10sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="@string/order_info_bottom_msg_4"
        android:textColor="@color/gray_999"
        android:textSize="10sp"/>
</LinearLayout>
