<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/tips_bg"
              android:orientation="vertical">
    <!--<LinearLayout
        android:background="@color/tips_bg"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">-->


    <TextView
        android:id="@+id/child_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/string_hs_text_01_2103"
        android:textColor="@color/white"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/child_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/string_hs_text_02_2103"
        android:textColor="@color/white"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/child_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="7dp"
        android:gravity="center"
        android:text="@string/string_hs_text_03_2103"
        android:textColor="@color/white"
        android:textSize="17sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@mipmap/package_tips_button"
        android:gravity="center"
        android:text="@string/package_confirm"
        android:textColor="@color/white"
        android:textSize="16sp"/>
    <!--</LinearLayout>-->
</LinearLayout>